Change to 2018 edition

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "graml"
 version = "0.1.0"
 authors = ["Florian Marending <floriama@student.ethz.ch>"]
+edition = "2018"
 
 [lib]
 name = "graml"
